--- a/style.css
+++ b/style.css
@@ -232,38 +232,14 @@ h5 {
 .more_news {
 	margin: -10px 0 30px 0;
 }
-/*********************Ticker***********************/
+/*********************END LOCAL NEWS STYLES***********************/
 
-.TickerNews {
-  width:100%;
-  height:50px;
-  line-height:50px;
+/*********************CULTURE STYLES***********************/
+
+section img, .review_image {
+	max-width: 100%;
 }
-
-.ti_wrapper {
-  width:100%;
-  position:relative;
-  overflow:hidden;
-  height:50px;
-}
-
-.ti_slide {
-  width:30000px;
-  position:relative;
-  left:0;
-  top:0;
-}
-
-.ti_content {
-  width:8000px;
-  position:relative;
-  float:left;
-}
-
-.ti_news {float:left;
-}
-
-/*********************end ticker***********************/
+/*********************END CULTURE STYLES***********************/
 
 /*********************FOOTER***********************/
 footer {
