--- a/style.css
+++ b/style.css
@@ -364,7 +364,8 @@ section img, .review_image {
   display: block;
   position: absolute;
   z-index: 2;
-  font-size: 20px;
+	font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.2em;
   text-shadow: none;
   color: #fff;
   background: #000;
