--- a/style.css
+++ b/style.css
@@ -1451,18 +1451,41 @@ footer p a {
 
 	.opinion_main_story {
 		order: 3;
+		margin-top: 20px;
 	}
 
 	.opinion_container {
 		flex-basis: 30%;
 	}
 
+	.opinion_main_story h3 a {
+    font-size: 1em;
+	}
+
 	.deer_container h4 a{
 		font-size: 1.5em;
 	}
 
+	.opinion_section {
+		border: none;
+	}
 	.opinion_container hr {
 		display: none;
+	}
+
+	.opinion_section h5 {
+		text-align: center;
+		font-size: 2.3em;
+	}
+
+	.opinion_section ul {
+		columns: 2;
+	  column-gap: 5%;
+	}
+
+	.opinion_vertical_align {
+		max-width: 1000px;
+		margin: 0 auto;
 	}
 }
 
@@ -1501,6 +1524,7 @@ footer p a {
 	footer p {
 		font-size: 1.2em
 	}
+
 }
 
 @media (min-width: 1200px) {
@@ -1623,7 +1647,7 @@ footer p a {
 	.review_container h4 a {
     font-size: 2em;
 	}
-	
+
 	.vertical_align {
 		max-width: 1500px;
 		margin: 0 auto;
